derive/test/compile_fail/enum_unindexed_fields.rs
use sval_derive::*;

#[derive(Value)]
#[sval(unindexed_fields)]
pub enum Enum {
    A,
    B,
    C,
}

fn main() {

}