derive/test/compile_fail/enum_unindexed_fields.stderr
error: unsupported attribute `unindexed_fields` on enum
 --> compile_fail/enum_unindexed_fields.rs:4:8
  |
4 | #[sval(unindexed_fields)]
  |        ^^^^^^^^^^^^^^^^
